--- a/part_ii.ipynb
+++ b/part_ii.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -170,7 +170,7 @@
        "7   1   1   1  0.875"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -207,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -247,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -608,7 +608,7 @@
        "31   1   1   1   1   1  0.765625"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -632,7 +632,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -768,22 +768,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "X1 ['phi_X2', 'phi_X3', 'phi_X5', 'phi_X4', 'phi_X6', 'phi_X7', 'phi_X8', 'phi_X9', 'phi_X10', 'phi_X11', 'tau_X1']\n",
-      "X2 ['phi_X3', 'phi_X5', 'phi_X4', 'phi_X6', 'phi_X7', 'phi_X8', 'phi_X9', 'phi_X10', 'phi_X11', 'tau_X1', 'tau_X2']\n",
-      "X3 ['phi_X5', 'phi_X4', 'phi_X6', 'phi_X7', 'phi_X8', 'phi_X9', 'phi_X10', 'phi_X11', 'tau_X1', 'tau_X2', 'tau_X3']\n",
-      "X4 ['phi_X5', 'phi_X6', 'phi_X7', 'phi_X8', 'phi_X9', 'phi_X10', 'phi_X11', 'tau_X1', 'tau_X3', 'tau_X4']\n",
-      "X5 ['phi_X6', 'phi_X7', 'phi_X8', 'phi_X9', 'phi_X10', 'phi_X11', 'tau_X1', 'tau_X3', 'tau_X4', 'tau_X5']\n",
-      "X6 ['phi_X7', 'phi_X8', 'phi_X10', 'phi_X11', 'tau_X1', 'tau_X3', 'tau_X4', 'tau_X5', 'tau_X6']\n",
-      "X7 ['phi_X8', 'phi_X11', 'tau_X3', 'tau_X4', 'tau_X5', 'tau_X7']\n",
-      "X8 ['tau_X8']\n",
-      "X9 ['tau_X9']\n",
       "[(   X11  X10      prob\n",
       "0    0    0  0.095215\n",
       "1    0    1  0.134399\n",
@@ -798,7 +789,6 @@
     "    # For each variable in the elimination order\n",
     "    for var in order:\n",
     "        factors = sum_product_eliminate_var(factors, var)\n",
-    "        print(var, [i[1] for i in factors])\n",
     "    return factors\n",
     "\n",
     "print(sum_product_ve(factor_list, variables_to_eliminate))"
@@ -806,53 +796,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "11 11 \n",
-      " ['phi_X1', 'phi_X2', 'phi_X3', 'phi_X5', 'phi_X4', 'phi_X6', 'phi_X7', 'phi_X8', 'phi_X9', 'phi_X10', 'phi_X11']\n",
-      "X1 ['phi_X2', 'phi_X3', 'phi_X5', 'phi_X4', 'phi_X6', 'phi_X7', 'phi_X8', 'phi_X9', 'phi_X10', 'phi_X11', 'tau_X1']\n",
-      "X2 ['phi_X3', 'phi_X5', 'phi_X4', 'phi_X6', 'phi_X7', 'phi_X8', 'phi_X9', 'phi_X10', 'phi_X11', 'tau_X1', 'tau_X2']\n",
-      "X3 ['phi_X5', 'phi_X4', 'phi_X6', 'phi_X7', 'phi_X8', 'phi_X9', 'phi_X10', 'phi_X11', 'tau_X1', 'tau_X2', 'tau_X3']\n",
-      "X4 ['phi_X5', 'phi_X6', 'phi_X7', 'phi_X8', 'phi_X9', 'phi_X10', 'phi_X11', 'tau_X1', 'tau_X3', 'tau_X4']\n",
-      "X5 ['phi_X6', 'phi_X7', 'phi_X8', 'phi_X9', 'phi_X10', 'phi_X11', 'tau_X1', 'tau_X3', 'tau_X4', 'tau_X5']\n",
-      "X6 ['phi_X7', 'phi_X8', 'phi_X10', 'phi_X11', 'tau_X1', 'tau_X3', 'tau_X4', 'tau_X5', 'tau_X6']\n",
-      "X7 ['phi_X8', 'phi_X11', 'tau_X3', 'tau_X4', 'tau_X5', 'tau_X7']\n",
-      "X8 ['tau_X8']\n",
-      "X9 ['tau_X9']\n",
-      "[(   X11  X10      prob\n",
-      "0    0    0  0.000090\n",
-      "1    0    1  0.000158\n",
-      "2    1    0  0.000135\n",
-      "3    1    1  0.000237, 'tau_X9')]\n",
-      "   X10  X11      prob\n",
-      "0    0    0  0.145455\n",
-      "1    0    1  0.218182\n",
-      "2    1    0  0.254545\n",
-      "3    1    1  0.381818\n"
-     ]
-    },
     {
      "data": {
       "text/plain": [
        "(   X10  X11      prob\n",
-       " 0    0    0  0.145455\n",
-       " 1    0    1  0.218182\n",
-       " 2    1    0  0.254545\n",
-       " 3    1    1  0.381818,\n",
+       " 0    0    0  0.080808\n",
+       " 1    0    1  0.282828\n",
+       " 2    1    0  0.141414\n",
+       " 3    1    1  0.494949,\n",
        " [(   X11  X10      prob\n",
-       "   0    0    0  0.000090\n",
-       "   1    0    1  0.000158\n",
-       "   2    1    0  0.000135\n",
-       "   3    1    1  0.000237,\n",
+       "   0    0    0  0.000946\n",
+       "   1    0    1  0.001656\n",
+       "   2    1    0  0.003312\n",
+       "   3    1    1  0.005796,\n",
        "   'tau_X9')])"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -883,18 +846,14 @@
     "    #     order_.remove(elm)\n",
     "    \n",
     "    concat_factor_list = list(zip(factors_list,names_list))\n",
-    "    print(len(factors_list), len(names_list), '\\n', names_list)\n",
+    "    #print(len(factors_list), len(names_list), '\\n', names_list)\n",
     "    \n",
     "    phi = sum_product_ve(concat_factor_list, order_)\n",
-    "    print(phi)\n",
+    "    #print(phi)\n",
     "\n",
     "    alpha = phi[0][0].groupby(queries, as_index = False)['prob'].sum()\n",
     "    alpha['prob'] = alpha['prob'] / alpha['prob'].sum() # Normalize the probability\n",
-    "    print(alpha)\n",
-    "\n",
-    "    #phi[0][0]['test'] = phi[0][0]['prob']*(1/(alpha['prob']))\n",
-    "    #print(phi)\n",
-    "    # a = 0 # some sum over phi(y)\n",
+    "   \n",
     "    return alpha, phi\n",
     "\n",
     "cond_prob_ve(factor_list, query_var, evidence, variables_to_eliminate)"
