--- a/part_ii.ipynb
+++ b/part_ii.ipynb
@@ -796,35 +796,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(   X10  X11      prob\n",
-       " 0    0    0  0.080808\n",
-       " 1    0    1  0.282828\n",
-       " 2    1    0  0.141414\n",
-       " 3    1    1  0.494949,\n",
-       " [(   X11  X10      prob\n",
-       "   0    0    0  0.000946\n",
-       "   1    0    1  0.001656\n",
-       "   2    1    0  0.003312\n",
-       "   3    1    1  0.005796,\n",
-       "   'tau_X9')])"
+       "(   X11      prob\n",
+       " 0    0  0.117647\n",
+       " 1    1  0.882353,\n",
+       " [(   X11      prob\n",
+       "   0    0  0.009204\n",
+       "   1    1  0.069029,\n",
+       "   'tau_X10')])"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 75,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "variables_to_eliminate = ['X1', 'X2', 'X3', 'X4', 'X5', 'X6', 'X7', 'X8', 'X9']\n",
+    "variables_to_eliminate = ['X1', 'X2', 'X3', 'X4', 'X5', 'X6', 'X7', 'X8', 'X9','X10']\n",
     "K = ['X1', 'X2', 'X3', 'X4', 'X5', 'X6', 'X7', 'X8', 'X9', 'X10', 'X11']\n",
-    "evidence = [('X1', 1), ('X2',1), ('X3',1),('X4',1),(\"X5\",1),('X6',1),('X7',1),('X8',1),('X9',0)]\n",
-    "query_var = ['X10', 'X11']\n",
+    "evidence = [('X1', 1), ('X2',1), ('X3',1),('X4',1),(\"X5\",1),('X6',1),('X7',1),('X8',1),('X9',1),('X10',1)]\n",
+    "#evidence = [('X11',1)]\n",
+    "query_var = ['X11']\n",
     "\n",
     "# k - parameterizing nework k over X\n",
     "# query_var - Set of query variables Y\n",
