--- a/part_ii.ipynb
+++ b/part_ii.ipynb
@@ -879,6 +879,17 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# This is the evidence given to the inference algorithm. \n",
+    "# Change the values to your preference.\n",
+    "evidence = [('X1', 1), ('X2',1), ('X3',1),('X4',1),(\"X5\",1),('X6',1),('X7',1),('X8',1),('X9',1)]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 48,
    "metadata": {},
    "outputs": [
@@ -909,7 +920,7 @@
     "# evidence contains the same variables as variables_to_eliminate\n",
     "K = ['X1', 'X2', 'X3', 'X4', 'X5', 'X6', 'X7', 'X8', 'X9', 'X10', 'X11']\n",
     "variables_to_eliminate = ['X1', 'X2', 'X3', 'X4', 'X5', 'X6', 'X7', 'X8', 'X9']\n",
-    "evidence = [('X1', 1), ('X2',1), ('X3',1),('X4',1),(\"X5\",1),('X6',1),('X7',1),('X8',1),('X9',1)]\n",
+    "\n",
     "#evidence = [('X11',1)]\n",
     "query_var = ['X10', 'X11']\n",
     "\n",
