--- a/part_i.ipynb
+++ b/part_i.ipynb
@@ -2,22 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# General\n",
-    "import pandas as pd # for data manipulation\n",
-    "import numpy as np # for numerical operations\n",
-    "import matplotlib.pyplot as plt # for plotting\n",
+    "import pandas as pd \n",
+    "import numpy as np \n",
+    "import matplotlib.pyplot as plt \n",
     "import networkx as nx # for graph operations\n",
     "import timeit # for timing code\n",
     "\n",
-    "\n",
-    "# Matrix operations\n",
     "from itertools import product\n",
     "\n",
-    "# Machine learning\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.linear_model import LogisticRegression\n"
    ]
@@ -26,14 +22,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Data"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### consensus_adj_mat"
+    "## 1.1 Load data"
    ]
   },
   {
@@ -134,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -142,17 +131,19 @@
      "output_type": "stream",
      "text": [
       "   Akt  Erk  Jnk  Mek  P38  PIP2  PIP3  PKA  PKC\n",
-      "0  0.0  0.0  1.0  0.0  1.0   0.0   1.0  0.0  1.0\n",
-      "1  0.0  0.0  1.0  0.0  0.0   0.0   0.0  0.0  0.0\n",
-      "2  0.0  0.0  0.0  1.0  0.0   0.0   0.0  0.0  0.0\n",
-      "3  0.0  0.0  0.0  1.0  0.0   0.0   0.0  0.0  0.0\n",
-      "4  1.0  0.0  1.0  0.0  0.0   0.0   0.0  0.0  0.0\n",
+      "0    0    0    1    0    1     0     1    0    1\n",
+      "1    0    0    1    0    0     0     0    0    0\n",
+      "2    0    0    0    1    0     0     0    0    0\n",
+      "3    0    0    0    1    0     0     0    0    0\n",
+      "4    1    0    1    0    0     0     0    0    0\n",
       "shape:  (853, 9)\n"
      ]
     }
    ],
    "source": [
     "df_raw = pd.read_csv('dataset/sachs_bin.csv')\n",
+    "# convert to int\n",
+    "df_raw = df_raw.astype(int)\n",
     "print(df_raw.head())\n",
     "print(\"shape: \", df_raw.shape)"
    ]
@@ -625,7 +616,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.8"
+   "version": "3.10.9"
   }
  },
  "nbformat": 4,
