--- a/part_ii.ipynb
+++ b/part_ii.ipynb
@@ -529,7 +529,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "def convert_to_evidence_format(data : list, pick : list) -> list:\n",
     "    \"\"\" \n",
     "    This is a helper function to create a factor from a dataset. \n",
@@ -541,7 +540,7 @@
     "    pick (list): List of variables X1, ..., X9\n",
     "\n",
     "    Returns:\n",
-    "    evidence (list):    \n",
+    "    evidence (list): example: [(X1, 1), (X2, 0), (X3, 1), (X4, 0), (X5, 1), (X6, 0), (X7, 1), (X8, 0), (X9, 1]\n",
     "    \"\"\"\n",
     "\n",
     "    evidence = []\n",
@@ -762,13 +761,22 @@
     }
    ],
    "source": [
-    "# Load the simulated data \n",
+    "# Load the 50,000 simulated dataset\n",
     "column_names = ['X1', 'X2', 'X3', 'X4', 'X5', 'X6', 'X7', 'X8', 'X9', 'remove1', 'remove2']\n",
-    "pd_dataset = pd.read_csv(\"dataset/forward_simulation.csv\") \n",
+    "pd_dataset = pd.read_csv(\"dataset/50K_forward_simulation.csv\") \n",
     "pd_dataset = pd_dataset.rename(columns=dict(zip(pd_dataset.columns, column_names)))\n",
     "pd_dataset = pd_dataset.drop(columns=['remove1', 'remove2'], axis=0)\n",
     "\n",
     "pd_dataset.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The code below will compute inference on the simulated data.\n",
+    "\n",
+    "Don't run this code, it will take a long time to run."
    ]
   },
   {
@@ -783,17 +791,9 @@
     "query_var = ['X10', 'X11']\n",
     "\n",
     "# results are saved to csv \n",
-    "#inference_date = dataframe_inference(pd_dataset, column_names, query_var, variables_to_eliminate)\n",
-    "#print(inference_date)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#inference_date.to_csv('dataset/50K_inference_sim.csv', index=False)"
+    "#inference_data = dataframe_inference(pd_dataset, column_names, query_var, variables_to_eliminate)\n",
+    "\n",
+    "#inference_dat.to_csv('dataset/50K_inference_sim.csv', index=False)"
    ]
   },
   {
@@ -939,11 +939,11 @@
     }
    ],
    "source": [
-    "inference_date = pd.read_csv(\"dataset/50K_inference_sim.csv\") \n",
+    "inference_data = pd.read_csv(\"dataset/50K_inference_sim.csv\") \n",
     "\n",
     "#inference_date = inference_date.rename(columns=dict(zip(inference_date.columns, column_names)))\n",
     "#inference_date = inference_date.drop(columns=['X10_prob', 'X11_prob'], axis=0)\n",
-    "inference_date.head()"
+    "inference_data.head()"
    ]
   },
   {
