--- a/part_ii.ipynb
+++ b/part_ii.ipynb
@@ -540,7 +540,7 @@
     "    pick (list): List of variables X1, ..., X9\n",
     "\n",
     "    Returns:\n",
-    "    evidence (list): example: [(X1, 1), (X2, 0), (X3, 1), (X4, 0), (X5, 1), (X6, 0), (X7, 1), (X8, 0), (X9, 1]\n",
+    "    evidence (list): example: [(X1, 1), (X2, 0), (X3, 1), (X4, 0), (X5, 1), (X6, 0), (X7, 1), (X8, 0), (X9, 1)]\n",
     "    \"\"\"\n",
     "\n",
     "    evidence = []\n",
@@ -567,7 +567,7 @@
     "    pick (list): List of variables X1, ..., X9\n",
     "\n",
     "    Returns:\n",
-    "    evidence (list):\n",
+    "    evidence (list): [(X1, 1), (X2, 0), (X3, 1), (X4, 0), (X5, 1), (X6, 0), (X7, 1), (X8, 0), (X9, 1)]\n",
     "    \"\"\"\n",
     "    data = [] \n",
     "    \n",
@@ -763,7 +763,7 @@
    "source": [
     "# Load the 50,000 simulated dataset\n",
     "column_names = ['X1', 'X2', 'X3', 'X4', 'X5', 'X6', 'X7', 'X8', 'X9', 'remove1', 'remove2']\n",
-    "pd_dataset = pd.read_csv(\"dataset/50K_forward_simulation.csv\") \n",
+    "pd_dataset = pd.read_csv(\"dataset/50K_forward_sim.csv\") \n",
     "pd_dataset = pd_dataset.rename(columns=dict(zip(pd_dataset.columns, column_names)))\n",
     "pd_dataset = pd_dataset.drop(columns=['remove1', 'remove2'], axis=0)\n",
     "\n",
@@ -793,7 +793,7 @@
     "# results are saved to csv \n",
     "#inference_data = dataframe_inference(pd_dataset, column_names, query_var, variables_to_eliminate)\n",
     "\n",
-    "#inference_dat.to_csv('dataset/50K_inference_sim.csv', index=False)"
+    "#inference_data.to_csv('dataset/50K_inference_sim.csv', index=False)"
    ]
   },
   {
@@ -939,11 +939,11 @@
     }
    ],
    "source": [
-    "inference_data = pd.read_csv(\"dataset/50K_inference_sim.csv\") \n",
+    "pd_dataset = pd.read_csv(\"dataset/50K_inference_sim.csv\") \n",
     "\n",
     "#inference_date = inference_date.rename(columns=dict(zip(inference_date.columns, column_names)))\n",
     "#inference_date = inference_date.drop(columns=['X10_prob', 'X11_prob'], axis=0)\n",
-    "inference_data.head()"
+    "pd_dataset.head()"
    ]
   },
   {
@@ -963,7 +963,7 @@
     }
    ],
    "source": [
-    "fwd_sim_inf_percentages = inference_date.mean()  # mean() calculates the proportion of 1s, multiplying by 100 gives the percentage\n",
+    "fwd_sim_inf_percentages = pd_dataset.mean()  # mean() calculates the proportion of 1s, multiplying by 100 gives the percentage\n",
     "\n",
     "# Plotting\n",
     "fig, ax = plt.subplots()\n",
