--- a/part_ii.ipynb
+++ b/part_ii.ipynb
@@ -947,7 +947,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -978,7 +978,7 @@
     "ax.set_axisbelow(True)\n",
     "plt.grid(axis='y', linestyle='-', linewidth=0.7,color='lightgray')  \n",
     "plt.show()\n",
-    "fig1.savefig('sachs_part_i.png')"
+    "fig1.savefig('inf_fwd_sim.png')"
    ]
   },
   {
