--- a/part_i.ipynb
+++ b/part_i.ipynb
@@ -589,6 +589,10 @@
       "100: Log_Reg accuracy for X10: 0.95\n",
       "100: Log_Reg accuracy for X11: 0.85\n",
       "\n",
+      "\n",
+      "1000: Log_Reg accuracy for X10: 0.69\n",
+      "1000: Log_Reg accuracy for X11: 0.75\n",
+      "\n",
       "\n"
      ]
     }
