--- a/part_ii.ipynb
+++ b/part_ii.ipynb
@@ -1761,9 +1761,16 @@
     "                (\"X7\", []),(\"X8\", []),(\"X9\", ['X10', 'X6']), (\"X10\", ['X7']),(\"X11\", ['X8', 'X9'])]\n",
     "\n",
     "# Convert the data into factors\n",
-    "''' Takes a dataframe and a Bayesian network, and run the logist regression algorithm on the data to generate the cpd's\n",
-    "    and then we convert into factors.'''\n",
+    "\n",
     "def data_to_factors(df, bn_structure):\n",
+    "    ''' \n",
+    "    Takes a dataframe and a Bayesian network, and run the logist regression algorithm on the data to generate the cpd's\n",
+    "    and then we convert into factors.\n",
+    "    \n",
+    "    Arguments:\n",
+    "    df (pandas.DataFrame): The dataframe containing all columns\n",
+    "    bn_structure (list): list defined above. The Bayesian network structure\n",
+    "    '''\n",
     "    lst = []\n",
     "    for elm in bn_structure:\n",
     "        print(bn_structure)\n",
@@ -2213,7 +2220,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.8"
+   "version": "3.10.9"
   }
  },
  "nbformat": 4,
