--- a/part_ii.ipynb
+++ b/part_ii.ipynb
@@ -1760,7 +1760,7 @@
     "                (\"X5\", ['X9', 'X8']),(\"X4\", ['X11', 'X8', 'X9']),(\"X6\", ['X7', 'X10']),\n",
     "                (\"X7\", []),(\"X8\", []),(\"X9\", ['X10', 'X6']), (\"X10\", ['X7']),(\"X11\", ['X8', 'X9'])]\n",
     "\n",
-    "# Convert the data into factors\n",
+    "\n",
     "\n",
     "def data_to_factors(df, bn_structure):\n",
     "    ''' \n",
@@ -1770,6 +1770,9 @@
     "    Arguments:\n",
     "    df (pandas.DataFrame): The dataframe containing all columns\n",
     "    bn_structure (list): list defined above. The Bayesian network structure\n",
+    "\n",
+    "    Returns:\n",
+    "    lst (list): list of factors (pandas.DataFrame). [ ( 'Xi', ), ...]\n",
     "    '''\n",
     "    lst = []\n",
     "    for elm in bn_structure:\n",
