--- a/tove.ipynb
+++ b/tove.ipynb
@@ -1895,6 +1895,71 @@
     "nx.draw_networkx(G, pos, with_labels=True, node_size=2000, node_color=\"skyblue\", font_size=12, font_weight=\"bold\", arrowstyle=\"->\", arrowsize=20)\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 434,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fwd_sim_df = pd.read_csv('dataset/50K_forward_simulation.csv')\n",
+    "inf_sim_df = pd.read_csv('dataset/50K_inference_sim.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 436,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "30996"
+      ]
+     },
+     "execution_count": 436,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fwd_X10 = fwd_sim_df['X10'].sum()\n",
+    "fwd_X10"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 439,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fwd_X10 = fwd_sim_df['X10'].sum()\n",
+    "fwd_X11 = fwd_sim_df['X11'].sum()\n",
+    "\n",
+    "inf_sim_X10 = inf_sim_df['X10'].sum()\n",
+    "inf_sim_X11 = inf_sim_df['X11'].sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 440,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "X10 difference:  1.010291650535553 \n",
+      "X11 difference:  1.0030917924601834\n"
+     ]
+    }
+   ],
+   "source": [
+    "X10_diff = inf_sim_X10/fwd_X10\n",
+    "X11_diff = inf_sim_X11/fwd_X11\n",
+    "\n",
+    "print('X10 difference: ', X10_diff, '\\nX11 difference: ', X11_diff)"
+   ]
   }
  ],
  "metadata": {
