--- a/part_ii.ipynb
+++ b/part_ii.ipynb
@@ -453,7 +453,17 @@
     "    # For each variable in the elimination order\n",
     "    for var in order:\n",
     "        factors = sum_product_eliminate_var(factors, var)\n",
-    "    return factors"
+    "\n",
+    "    factors_list = [i[0] for i in factors] # Factors\n",
+    "    names_list = [i[1] for i in factors] # Names of factors\n",
+    "\n",
+    "    factor_ = factors_list[0]\n",
+    "    for i in range(1, len(factors_list)):\n",
+    "        factor_ = factor_product(factor_, factors_list[i])\n",
+    "\n",
+    "\n",
+    "    \n",
+    "    return [(factor_,'Sum-Product')]"
    ]
   },
   {
@@ -509,8 +519,13 @@
     "                factors_list[i] = factors_list[i][factors_list[i][elm[0]]==elm[1]]\n",
     "    \n",
     "    # Remove elements we want to keep from elemination order\n",
-    "    # for elm in evidence:\n",
-    "    #     order_.remove(elm)\n",
+    "    for elm in evidence:\n",
+    "        if elm[0] in order_:\n",
+    "            order_.remove(elm[0])\n",
+    "    \n",
+    "    for var in queries:\n",
+    "        if var in order_:\n",
+    "            order_.remove(var)\n",
     "    \n",
     "    concat_factor_list = list(zip(factors_list,names_list))\n",
     "    \n",
